syntax = "proto3";
package vince;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/gernest/vince";

message Event {
  string name = 1;
  string domain = 2;
  uint64 user_id = 3;
  uint64 session_id = 4;
  string hostname = 5;
  string pathname = 6;
  string referrer = 7;
  string referrer_source = 8;
  string country_code = 9;
  string screen_size = 10;
  string operating_system = 11;
  string browser = 12;
  string utm_medium = 13;
  string utm_source = 14;
  string utm_campaign = 15;
  map<string, string> meta = 16;
  string browser_version = 17;
  string operating_system_version = 18;
  string subdivision1_code = 19;
  string subdivision2_code = 20;
  uint32 city_geoname_id = 21;
  string utm_content = 22;
  string utm_term = 23;
  string transferred_from = 24;
  google.protobuf.Timestamp timestamp = 25;
}

message Session {
  uint64 session_id = 1;
  uint32 sign = 2;
  string domain = 4;
  uint64 user_id = 5;
  string host_name = 6;
  bool is_bounce = 7;
  string entry_page = 8;
  string exit_page = 9;
  uint64 page_views = 10;
  uint64 events = 11;
  google.protobuf.Duration duration = 12;
  string referrer = 13;
  string referrer_source = 14;
  string country_code = 15;
  string operating_system = 16;
  string browser = 17;
  string utm_medium = 18;
  string utm_source = 19;
  string utm_campaign = 20;
  string browser_version = 21;
  string operating_system_version = 22;
  string subdivision1_code = 23;
  string subdivision2_code = 24;
  uint32 city_geoname_id = 25;
  string utm_content = 26;
  string utm_term = 27;
  string transferred_from = 28;
  google.protobuf.Timestamp start = 29;
  map<string, string> entry_meta = 30;
  google.protobuf.Timestamp timestamp = 31;
}

message ImportedVisitor {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  uint64 visitors = 3;
  uint64 pageviews = 4;
  uint64 bounces = 5;
  uint64 visits = 7;
  uint64 visit_duration = 8;
}

message ImportedSources {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string source = 3;
  string utm_medium = 4;
  string utm_campaign = 5;
  string utm_content = 6;
  string utm_term = 7;
  uint64 visitors = 8;
  uint64 visits = 9;
  uint64 visit_duration = 10;
  uint32 bounces = 11;
}

message ImortedPages {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string hostname = 3;
  string page = 4;
  uint64 visitors = 5;
  uint64 pagevies = 6;
  uint64 exits = 7;
  uint64 time_on_page = 8;
}

message ImportedEntryPages {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string entry_page = 3;
  uint64 visitors = 4;
  uint64 entrances = 5;
  uint64 visit_duration = 6;
  uint32 bounces = 7;
}

message ImportedExitPages {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string exit_page = 3;
  uint64 visitors = 4;
  uint64 exits = 5;
}

message ImportedLocations {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string country = 3;
  string region = 4;
  uint64 city = 5;
  uint64 visitors = 6;
  uint64 visits = 7;
  uint64 visit_duration = 8;
  uint32 bounces = 9;
}

message ImportedDevices {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string devise = 3;
  uint64 visitors = 4;
  uint64 visits = 5;
  uint64 visit_duration = 6;
  uint32 bounces = 7;
}

message ImportedBrowser {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string browser = 3;
  uint64 visitors = 4;
  uint64 visits = 5;
  uint64 visit_duration = 6;
  uint32 bounces = 7;
}

message ImportedOperatingSystem {
  uint64 site_id = 1;
  google.protobuf.Timestamp date = 2;
  string browser = 3;
  uint64 visitors = 4;
  uint64 visits = 5;
  uint64 visit_duration = 6;
  uint32 bounces = 7;
}